crates/adv-parse/tests/snapshots/ast_snap__rust_ast.snap
---
source: crates/adv-parse/tests/ast_snap.rs
expression: ast.nodes
---
[
    AstNode {
        kind: Identifier {
            name: 0,
        },
        span: Span {
            start_line: 1,
            start_col: 4,
            end_line: 1,
            end_col: 7,
            start_byte: 4,
            end_byte: 7,
        },
        children: [],
        parent: Some(
            AstId(
                2,
            ),
        ),
    },
    AstNode {
        kind: Identifier {
            name: 1,
        },
        span: Span {
            start_line: 1,
            start_col: 9,
            end_line: 1,
            end_col: 12,
            start_byte: 9,
            end_byte: 12,
        },
        children: [],
        parent: Some(
            AstId(
                2,
            ),
        ),
    },
    AstNode {
        kind: Other {
            ts_kind: "scoped_identifier",
        },
        span: Span {
            start_line: 1,
            start_col: 4,
            end_line: 1,
            end_col: 12,
            start_byte: 4,
            end_byte: 12,
        },
        children: [
            AstId(
                0,
            ),
            AstId(
                1,
            ),
        ],
        parent: Some(
            AstId(
                3,
            ),
        ),
    },
    AstNode {
        kind: Import {
            module: "",
            names: [
                (
                    "std::env",
                    "env",
                ),
            ],
        },
        span: Span {
            start_line: 1,
            start_col: 0,
            end_line: 1,
            end_col: 13,
            start_byte: 0,
            end_byte: 13,
        },
        children: [
            AstId(
                2,
            ),
        ],
        parent: Some(
            AstId(
                19,
            ),
        ),
    },
    AstNode {
        kind: Identifier {
            name: 2,
        },
        span: Span {
            start_line: 2,
            start_col: 3,
            end_line: 2,
            end_col: 7,
            start_byte: 17,
            end_byte: 21,
        },
        children: [],
        parent: Some(
            AstId(
                18,
            ),
        ),
    },
    AstNode {
        kind: Other {
            ts_kind: "parameters",
        },
        span: Span {
            start_line: 2,
            start_col: 7,
            end_line: 2,
            end_col: 9,
            start_byte: 21,
            end_byte: 23,
        },
        children: [],
        parent: Some(
            AstId(
                18,
            ),
        ),
    },
    AstNode {
        kind: Identifier {
            name: 3,
        },
        span: Span {
            start_line: 3,
            start_col: 8,
            end_line: 3,
            end_col: 9,
            start_byte: 34,
            end_byte: 35,
        },
        children: [],
        parent: Some(
            AstId(
                16,
            ),
        ),
    },
    AstNode {
        kind: Identifier {
            name: 1,
        },
        span: Span {
            start_line: 3,
            start_col: 12,
            end_line: 3,
            end_col: 15,
            start_byte: 38,
            end_byte: 41,
        },
        children: [],
        parent: Some(
            AstId(
                9,
            ),
        ),
    },
    AstNode {
        kind: Identifier {
            name: 4,
        },
        span: Span {
            start_line: 3,
            start_col: 17,
            end_line: 3,
            end_col: 20,
            start_byte: 43,
            end_byte: 46,
        },
        children: [],
        parent: Some(
            AstId(
                9,
            ),
        ),
    },
    AstNode {
        kind: Other {
            ts_kind: "scoped_identifier",
        },
        span: Span {
            start_line: 3,
            start_col: 12,
            end_line: 3,
            end_col: 20,
            start_byte: 38,
            end_byte: 46,
        },
        children: [
            AstId(
                7,
            ),
            AstId(
                8,
            ),
        ],
        parent: Some(
            AstId(
                12,
            ),
        ),
    },
    AstNode {
        kind: Other {
            ts_kind: "string_content",
        },
        span: Span {
            start_line: 3,
            start_col: 22,
            end_line: 3,
            end_col: 23,
            start_byte: 48,
            end_byte: 49,
        },
        children: [],
        parent: Some(
            AstId(
                11,
            ),
        ),
    },
    AstNode {
        kind: Literal {
            kind: Str,
            text: "\"X\"",
        },
        span: Span {
            start_line: 3,
            start_col: 21,
            end_line: 3,
            end_col: 24,
            start_byte: 47,
            end_byte: 50,
        },
        children: [
            AstId(
                10,
            ),
        ],
        parent: Some(
            AstId(
                12,
            ),
        ),
    },
    AstNode {
        kind: Call {
            callee: "env::var",
            args: [
                AstId(
                    11,
                ),
            ],
            kwargs: [],
        },
        span: Span {
            start_line: 3,
            start_col: 12,
            end_line: 3,
            end_col: 25,
            start_byte: 38,
            end_byte: 51,
        },
        children: [
            AstId(
                9,
            ),
            AstId(
                11,
            ),
        ],
        parent: Some(
            AstId(
                14,
            ),
        ),
    },
    AstNode {
        kind: Other {
            ts_kind: "field_identifier",
        },
        span: Span {
            start_line: 3,
            start_col: 26,
            end_line: 3,
            end_col: 32,
            start_byte: 52,
            end_byte: 58,
        },
        children: [],
        parent: Some(
            AstId(
                14,
            ),
        ),
    },
    AstNode {
        kind: Attribute {
            attr: 5,
        },
        span: Span {
            start_line: 3,
            start_col: 12,
            end_line: 3,
            end_col: 32,
            start_byte: 38,
            end_byte: 58,
        },
        children: [
            AstId(
                12,
            ),
            AstId(
                13,
            ),
        ],
        parent: Some(
            AstId(
                15,
            ),
        ),
    },
    AstNode {
        kind: Call {
            callee: "env::var.unwrap",
            args: [],
            kwargs: [],
        },
        span: Span {
            start_line: 3,
            start_col: 12,
            end_line: 3,
            end_col: 34,
            start_byte: 38,
            end_byte: 60,
        },
        children: [
            AstId(
                14,
            ),
        ],
        parent: Some(
            AstId(
                16,
            ),
        ),
    },
    AstNode {
        kind: Assignment {
            targets: [
                AstId(
                    6,
                ),
            ],
            value: Some(
                AstId(
                    15,
                ),
            ),
        },
        span: Span {
            start_line: 3,
            start_col: 4,
            end_line: 3,
            end_col: 35,
            start_byte: 30,
            end_byte: 61,
        },
        children: [
            AstId(
                6,
            ),
            AstId(
                15,
            ),
        ],
        parent: Some(
            AstId(
                17,
            ),
        ),
    },
    AstNode {
        kind: Block,
        span: Span {
            start_line: 2,
            start_col: 10,
            end_line: 4,
            end_col: 1,
            start_byte: 24,
            end_byte: 63,
        },
        children: [
            AstId(
                16,
            ),
        ],
        parent: Some(
            AstId(
                18,
            ),
        ),
    },
    AstNode {
        kind: FunctionDef {
            name: 2,
        },
        span: Span {
            start_line: 2,
            start_col: 0,
            end_line: 4,
            end_col: 1,
            start_byte: 14,
            end_byte: 63,
        },
        children: [
            AstId(
                4,
            ),
            AstId(
                5,
            ),
            AstId(
                17,
            ),
        ],
        parent: Some(
            AstId(
                19,
            ),
        ),
    },
    AstNode {
        kind: Module,
        span: Span {
            start_line: 1,
            start_col: 0,
            end_line: 5,
            end_col: 0,
            start_byte: 0,
            end_byte: 64,
        },
        children: [
            AstId(
                3,
            ),
            AstId(
                18,
            ),
        ],
        parent: None,
    },
]
